<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="br.com.wille.cleaningapp.StepTwoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@drawable/file_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/order"
                android:textColor="@android:color/white"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/user_icon" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="75dp"
            android:layout_marginTop="75dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ovalImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/oval_icon" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/ovalImage"
                    android:background="@drawable/line_icon" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/final_step"
                android:textAllCaps="true"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:text="@string/choose_time"
                android:textSize="17sp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="25dp"
                android:text="@string/when_to_clean"
                android:textSize="17sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_get_location"
                android:text="@string/get_my_location"
                android:textSize="10sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/layer_edit"
                    android:hint="@string/full_name"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:textColorHint="@color/hint_color"
                    android:textSize="14sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/layer_edit"
                    android:hint="@string/city"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:textColorHint="@color/hint_color"
                    android:textSize="14sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/layer_edit"
                    android:hint="@string/dubai"
                    android:paddingEnd="20dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingStart="20dp"
                    android:textColorHint="@color/hint_color"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_alignParentBottom="true"
            android:background="@color/end_final_step">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/btnGoToOrder"
                android:layout_marginTop="35dp"
                android:text="@string/total"
                android:textSize="17sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/btnGoToOrder"
                android:layout_marginStart="15dp"
                android:layout_marginTop="35dp"
                android:text="@string/price_order"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btnGoToOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/button_go_to_order"
                android:text="@string/go_to_order"
                android:textColor="@android:color/white" />

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>